<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.vakinc.testapp.WaitingRoomActivity">

    <TextView
            android:text="@string/roomkey"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waitingroomkey" android:layout_marginTop="140dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat" app:fontFamily="monospace"
            android:typeface="normal" android:textSize="24sp"/>
    <TextView
            android:text="@string/waiting"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/waiting"
            android:textAppearance="@style/TextAppearance.AppCompat" app:fontFamily="monospace"
            android:typeface="normal" android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/waitingroomkey"
            app:layout_constraintStart_toStartOf="@+id/waitingroomkey"
            app:layout_constraintTop_toBottomOf="@+id/waitingroomkey"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/player_list"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_list_lobby"
            android:textAppearance="@style/TextAppearance.AppCompat" app:fontFamily="monospace"
            android:typeface="normal" android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/waiting" app:layout_constraintEnd_toEndOf="@+id/waiting"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/waiting"/>
    <Button
            android:text="@string/start_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_game_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/player_list_lobby"
            app:layout_constraintEnd_toEndOf="@+id/player_list_lobby"
            app:layout_constraintStart_toStartOf="@+id/player_list_lobby" android:onClick="startGame"/>
</androidx.constraintlayout.widget.ConstraintLayout>
