<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.vakinc.testapp.GameActivity">

    <TextView
            android:text="@string/roomkey"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:gravity="center"
            android:id="@+id/active_key"
            android:textAppearance="@style/TextAppearance.AppCompat" app:fontFamily="monospace"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/target"
            app:layout_constraintStart_toStartOf="@+id/target" app:layout_constraintEnd_toEndOf="@+id/target"
            android:typeface="normal"/>
    <TextView
            android:text="@string/target"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:id="@+id/target"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" app:fontFamily="monospace"
            android:typeface="normal" android:textSize="24sp"/>
    <TextView
            android:text="@string/player_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/active_players"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/target"
            app:layout_constraintStart_toStartOf="@+id/target" app:layout_constraintEnd_toEndOf="@+id/target"
            android:typeface="monospace"/>
    <Button
            android:text="@string/assassinate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/target_assassinated_button" app:layout_constraintEnd_toEndOf="@+id/active_players"
            app:layout_constraintStart_toStartOf="@+id/active_players" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/active_players"
            android:textAppearance="@style/TextAppearance.AppCompat" android:onClick="assassinate"
            android:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
