<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JoinGameActivity">

    <TextView
            android:text="@string/player_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/player_name_text"
            android:textAppearance="@style/TextAppearance.AppCompat" app:fontFamily="monospace"
            android:typeface="normal" android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/player_name_entry"
            app:layout_constraintStart_toStartOf="@+id/player_name_entry"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/player_name_entry"/>
    <TextView
            android:text="@string/roomkey_enter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/roomkey_enter_text"
            android:textAppearance="@style/TextAppearance.AppCompat" app:fontFamily="monospace"
            android:typeface="normal" android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/player_name_entry"
            app:layout_constraintStart_toStartOf="@+id/player_name_entry" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/player_name_entry"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player_name_entry"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="joinGame"
            app:layout_constraintEnd_toEndOf="@+id/roomkey_entry"
            app:layout_constraintStart_toStartOf="@+id/roomkey_entry" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/roomkey_entry"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/roomkey_entry"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/roomkey_enter_text"
            app:layout_constraintStart_toStartOf="@+id/roomkey_enter_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/roomkey_enter_text" android:inputType="text"/>

</androidx.constraintlayout.widget.ConstraintLayout>